--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,23 +1,23 @@
 {
-    "builds": [
-      {
-        "src": "frontend/package.json",
-        "use": "@vercel/static-build"
-      },
-      {
-        "src": "backend/api/*.py",
-        "use": "@vercel/python"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/frontend/dist/$1"
-      },
-      {
-        "src": "/api/(.*)",
-        "dest": "/backend/api/$1.py"
-      }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build"
+    },
+    {
+      "src": "backend/app.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "frontend/$1"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "backend/app.py"
+    }
+  ]
+}
