--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,22 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build"
-    },
-    {
-      "src": "backend/app.py",
+      "src": "app.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "frontend/$1"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "backend/app.py"
+      "dest": "app.py"
     }
-  ]
+  ],
+  "env": {
+    "PYTHON_VERSION": "3.12"
+  }
 }
