--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,19 +1,12 @@
 services:
   - type: web
-    name: ecoayur-backend
+    name: ecoayur
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    buildCommand: |
+      cd backend && pip install -r requirements.txt
+      cd ../frontend && npm install && npm run build
+      cp -r frontend/dist/* backend/static/
+    startCommand: cd backend && gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
-        value: 3.12.0
-
-  - type: web
-    name: ecoayur-frontend
-    env: static
-    buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: ./frontend/dist
-    headers:
-      - path: /*
-        name: Cache-Control
-        value: no-cache
+        value: 3.11.11
