--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0 --port $PORT",
+    "start": "vite preview --host 0.0.0.0 --port $PORT"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +17,6 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "clsx": "^2.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
     "framer-motion": "^11.15.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -40,6 +38,5 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "vite": "^5.0.8"
-  },
-  "proxy": "http://localhost:YOUR_BACKEND_PORT"
+  }
 }
