--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,27 @@
 services:
+  # Backend API service
   - type: web
-    name: ecoayur
+    name: ecoayur-backend
     env: python
-    buildCommand: |
-      # Build frontend
-      cd frontend && npm install && npm run build
-      # Install backend dependencies
-      cd ../backend && pip install -r requirements.txt
-    startCommand: python backend/app.py
-    plan: free
+    buildCommand: pip install -r backend/requirements.txt
+    startCommand: cd backend && gunicorn app:app
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.0
+      - key: FLASK_ENV
+        value: production
+    
+  # Frontend service
+  - type: web
+    name: ecoayur-frontend
+    env: node
+    buildCommand: cd frontend && npm install && npm run build
+    startCommand: cd frontend && npm run preview
+    envVars:
+      - key: NODE_VERSION
+        value: 18.0.0
+      - key: VITE_API_URL
+        fromService:
+          name: ecoayur-backend
+          type: web
+          property: url
